--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,10 +1,36 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Name:</b>
-  <%= @artist.name %>
-</p>
+<h3><a href="/artists">Artists</a></h3>
+<div class="hoverable">
+  <h2><strong><%= @artist.name %></strong>
+  <span class="admin reset-font">
+    | <%= link_to 'Edit', edit_artist_path(@artist) %>
+    | <%= link_to 'Back', artists_path %>
+  </span>
+  </h2>
+</div>
 
+</br>
 
-<%= link_to 'Edit', edit_artist_path(@artist) %> |
-<%= link_to 'Back', artists_path %>
+<table>
+<!--   <tr>
+    <th></th>
+    <th>Song</th>
+    <th>Genre</th>
+    <th></th>
+    <th></th>
+  </tr> -->
+  <% songz = @artist.songs.sort{|s1, s2| s1.name.downcase <=> s2.name.downcase} %>
+  <% songz.each_with_index do |song, index| %>
+    <tr class="hoverable">
+      <td><%= index + 1 %></td>
+      <td><%= link_to truncate(song.name, length: 40),      song %></td>
+      <td><%= link_to " [#{song.genre.name}]",  genre_path(song.genre)   %></td>
+      
+      <td> <div class="admin"> | <%= link_to "Edit ", edit_song_path(song) %> </div></td>
+      <td> <div class="admin"> | <%= link_to "Delete", song, method: :delete, data: { confirm: 'Are you sure?' } %> </div></td>
+    </tr>
+  <% end %>
+</table>
+
+<br>
