--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,10 +1,36 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Name:</b>
-  <%= @genre.name %>
-</p>
+<h3><a href="/genres">Genres</a></h3>
+<div class="hoverable">
+  <h2><strong><%= @genre.name %></strong>
+  <span class="admin reset-font">
+    | <%= link_to 'Edit', edit_genre_path(@genre) %>
+    | <%= link_to 'Back', genres_path %>
+  </span>
+  </h2>
+</div>
 
+</br>
 
-<%= link_to 'Edit', edit_genre_path(@genre) %> |
-<%= link_to 'Back', genres_path %>
+<table>
+  <tr>
+    <th></th>
+    <th>Artist</th>
+    <th>Song</th>
+    <th></th>
+    <th></th>
+  </tr>
+  <% songz = @genre.songs.sort{|s1, s2| s1.artist.name.downcase <=> s2.artist.name.downcase} %>
+  <% songz.each_with_index do |song, index| %>
+    <tr class="hoverable">
+      <td><%= index + 1 %></td>
+      <td><%= link_to "#{song.artist.name}",  artist_path(song.artist) %></td>
+      <td><%= link_to truncate(song.name, length: 40),               song %></td>
+      
+      <td> <div class="admin"> | <%= link_to "Edit ", edit_song_path(song) %> </div></td>
+      <td> <div class="admin"> | <%= link_to "Delete", song, method: :delete, data: { confirm: 'Are you sure?' } %> </div></td>
+    </tr>
+  <% end %>
+</table>
+
+<br>
