--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing songs</h1>
+<!-- <h1>Listing songs</h1>
 
 <table>
   <tr>
@@ -8,16 +8,47 @@
     <th></th>
   </tr>
 
-<% @songs.each do |song| %>
+<%# @songs.each do |song| %>
   <tr>
-    <td><%= song.name %></td>
-    <td><%= link_to 'Show', song %></td>
-    <td><%= link_to 'Edit', edit_song_path(song) %></td>
-    <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%# song.name %></td>
+    <td><%# link_to 'Show', song %></td>
+    <td><%# link_to 'Edit', edit_song_path(song) %></td>
+    <td><%# link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
-<% end %>
+<%# end %>
 </table>
 
 <br />
 
-<%= link_to 'New Song', new_song_path %>
+
+ -->
+
+
+<h3>Songs</h3>
+<h5><%= link_to 'Add New Song', new_song_path %></h5>
+<hr>
+
+<table>
+  <tr>
+    <th></th>
+    <th>Artist</th>
+    <th>Song</th>
+    <th>Genre</th>
+    <th></th>
+    <th></th>
+  </tr>
+  <% songz = @songs.sort{|s1, s2| s1.name.downcase <=> s2.name.downcase} %>
+  <% songz.each_with_index do |song, index| %>
+    <tr class="hoverable">
+      <td><%= index + 1 %></td>
+      <td><%= link_to song.artist.name, artist_path(song.artist) %></td>
+      <td><%= link_to truncate(song.name, length: 40),      song %></td>
+      <td><%= link_to song.genre.name,  genre_path(song.genre)   %></td>
+      
+      <td> <div class="admin"> | <%= link_to "Edit ", edit_song_path(song) %> </div></td>
+      <td> <div class="admin"> | <%= link_to "Delete", song, method: :delete, data: { confirm: 'Are you sure?' } %> </div></td>
+    </tr>
+  <% end %>
+</table>
+
+</br>
