Update song form with artist, genre selection and intelligent defaults

--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -12,8 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name, "Song Name" %><br />
     <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label  :artist %> (<%= link_to 'Create New', new_artist_path %>)<br />
+    <%= f.select :artist_id, Artist.all.collect {|a| [ a.name, a.id ] }, {:include_blank => 'select an Artist', :selected => @selected_artist} %>
+  </div>
+  <div class="field">
+    <%= f.label  :genre %>  (<%= link_to 'Create New', new_genre_path %>)<br />
+    <%= f.select :genre_id,  Genre.all.collect {|g| [ g.name, g.id ] },  {:include_blank => 'select a Genre', :selected => @selected_genre} %>
   </div>
   <div class="actions">
     <%= f.submit %>
