Smarter song form

--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -17,11 +17,11 @@
   </div>
   <div class="field">
     <%= f.label  :artist %> (<%= link_to 'Create New', new_artist_path %>)<br />
-    <%= f.select :artist_id, Artist.all.collect {|a| [ a.name, a.id ] }, {:include_blank => 'select an Artist', :selected => @selected_artist} %>
+    <%= f.select :artist_id, Artist.all.sort {|a1, a2| a1.name.downcase<=>a2.name.downcase}.collect {|a| [ a.name, a.id ] }, {:include_blank => 'select an Artist', :selected => @selected_artist} %>
   </div>
   <div class="field">
     <%= f.label  :genre %>  (<%= link_to 'Create New', new_genre_path %>)<br />
-    <%= f.select :genre_id,  Genre.all.collect {|g| [ g.name, g.id ] },  {:include_blank => 'select a Genre', :selected => @selected_genre} %>
+    <%= f.select :genre_id,  Genre.all.sort {|g1, g2| g1.name.downcase<=>g2.name.downcase}.collect {|g| [ g.name, g.id ] },  {:include_blank => 'select a Genre', :selected => @selected_genre} %>
   </div>
   <div class="actions">
     <%= f.submit %>
