--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h3><a href="/genres">Genres</a></h3>
+<h3><%= link_to "Genres", genres_path %></h3>
 <div class="hoverable">
   <h2><strong><%= @genre.name %></strong>
   <span class="admin reset-font">
