--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -12,12 +12,12 @@ p, ol, ul, td {
   line-height: 18px;
 }
 
-pre {
+/*pre {
   background-color: #eee;
   padding: 10px;
   font-size: 11px;
 }
-
+*/
 a {
   color: #000;
   &:visited {
