--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <link rel='stylesheet' id='google_merriweather-css'  href='http://fonts.googleapis.com/css?family=Merriweather:400,700&ver=3.5' type='text/css' media='all' />
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
+  
   <style type="text/css">a{color:#60BDDB}</style>
 
   <%= javascript_include_tag "application" %>
@@ -26,8 +29,8 @@
       <div class="header">
         <div class="header-left">
           <h1 class="logo-text">
-            <a href="/" title="The Flatiron Playlister">
-              The Flatiron Playlister
+            <a href="/" title="Playlisterrr">
+              Playlisterrr
             </a>
           </h1>
         </div>
@@ -130,7 +133,7 @@
       </div>
       <div class="footer-text-right">
         <div class="copyright">
-          &copy; 2013. The Flatiron School.  All Your Rights Are Belong To Us.
+          &copy; 2013. Flatiron 002 Team Rogue.  All Your Music Are Belong To Us.
         </div>
       </div>
       <div class="clear"></div>
