--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@artist) do |f| %>
+<%= form_for @artist, :html => {class: "form-inline"} do |f| %>
   <% if @artist.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@artist.errors.count, "error") %> prohibited this artist from being saved:</h2>
@@ -11,11 +11,14 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
+  <%= field_set_tag "" do %>
+    <div class="control-group">
+      <%= f.label :name %><br />
+      <%= f.text_field :name %>
+    </div>
+  <% end %>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "#{@action} Artist", class: "btn btn-primary" %>
   </div>
 <% end %>
