--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -5,7 +5,8 @@
   <h2><strong><%= @artist.name %></strong>
   <span class="admin reset-font">
     | <%= link_to 'Edit', edit_artist_path(@artist) %>
-    | <%= link_to 'Back', artists_path %>
+    | <%= link_to 'Delete', @artist, method: :delete, data: { confirm: 'Are you sure?' } %>
+    | <%= link_to "Add Song", new_song_path, class: "btn btn-small btn-info" %>
   </span>
   </h2>
 </div>
@@ -20,7 +21,7 @@
     <th></th>
     <th></th>
   </tr> -->
-  <% songz = @artist.songs.sort{|s1, s2| s1.name.downcase <=> s2.name.downcase} %>
+  <% songz = @artist.songs.sort_by {|i| i.name.downcase} %>
   <% songz.each_with_index do |song, index| %>
     <tr class="hoverable">
       <td><%= index + 1 %></td>
@@ -34,7 +35,5 @@
 </table>
 
 <br>
-
-<%= link_to "Add Song", new_song_path %>
 
 <br>
