--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,35 +1,11 @@
-<!-- <h1>Listing genres</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<%# @genres.each do |genre| %>
-  <tr>
-    <td><%# genre.name %></td>
-    <td><%# link_to 'Show', genre %></td>
-    <td><%# link_to 'Edit', edit_genre_path(genre) %></td>
-    <td><%# link_to 'Destroy', genre, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<%# end %>
-</table>
-
-<br />
-
-<%# link_to 'New Genre', new_genre_path %>
- -->
-
+<p id="notice"><%= notice %></p>
 
 <h3>Genres</h3>
-<h5><%= link_to 'Add New Genre', new_genre_path %></h5>
+<%= link_to 'Add New Genre', new_genre_path, class: "btn btn-small btn-info" %>
 <hr>
 
 <ol>
-  <% genrez = @genres.sort{|a1, a2| a1.name.downcase <=> a2.name.downcase} %>
+  <% genrez = @genres.sort_by {|i| i.name.downcase} %>
   <% max = Genre.longest_name_length(genrez) %>
   <% genrez.each do |genre| %>
     <li>
