--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,31 +1,7 @@
-<!-- <h1>Listing songs</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<%# @songs.each do |song| %>
-  <tr>
-    <td><%# song.name %></td>
-    <td><%# link_to 'Show', song %></td>
-    <td><%# link_to 'Edit', edit_song_path(song) %></td>
-    <td><%# link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<%# end %>
-</table>
-
-<br />
-
-
- -->
-
+<p id="notice"><%= notice %></p>
 
 <h3>Songs</h3>
-<h5><%= link_to 'Add New Song', new_song_path %></h5>
+<%= link_to 'Add New Song', new_song_path, class: "btn btn-small btn-info" %>
 <hr>
 
 <table>
@@ -37,7 +13,7 @@
     <th></th>
     <th></th>
   </tr>
-  <% songz = @songs.sort{|s1, s2| s1.name.downcase <=> s2.name.downcase} %>
+  <% songz = @songs.sort_by {|i| i.name.downcase} %>
   <% songz.each_with_index do |song, index| %>
     <tr class="hoverable">
       <td><%= index + 1 %></td>
