--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New song</h1>
+<h3>New song</h3>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="span12">
 
-<%= link_to 'Back', songs_path %>
+    <%= render 'form' %>
+
+  </div>
+
+  <%= link_to 'Back', songs_path %>
+</div>
