Album integration & update styling

--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -1,6 +1,15 @@
 <h3>Editing album</h3>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="span12">
 
-<%= link_to 'Show', @album %> |
-<%= link_to 'Back', albums_path %>
+    <%= render 'form' %>
+
+    <%= link_to 'Show', @album %> |
+    <%= link_to 'Back', albums_path %>
+
+  </div>
+
+  <p>&nbsp;</p>
+</div>
+
