--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,6 +1,15 @@
 <h3>Editing artist</h3>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="span12">
 
-<%= link_to 'Show', @artist %> |
-<%= link_to 'Back', artists_path %>
+    <%= render 'form' %>
+
+    <%= link_to 'Show', @artist %> |
+    <%= link_to 'Back', artists_path %>
+
+  </div>
+
+  <p>&nbsp;</p>
+</div>
+
