--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,4 +1,6 @@
-<p id="notice"><%= notice %></p>
+<% if !notice.nil? %>
+  <p id="notice" class="alert"><%= notice %></p>
+<% end %>
 
 <h3><%= link_to "Genres", genres_path %></h3>
 <div class="hoverable">
@@ -17,16 +19,20 @@
   <tr>
     <th></th>
     <th>Artist</th>
+    <th>Album</th>
     <th>Song</th>
     <th></th>
     <th></th>
   </tr>
   <% songz = @genre.songs.sort_by {|i| i.artist.name.downcase} %>
   <% songz.each_with_index do |song, index| %>
+    <% album_name = song.album.nil?  ?  ""  : song.album.name  %>
+    <% album_link = song.album.nil?  ?  "#" : album_path(song.album) %>
     <tr class="hoverable">
       <td><%= index + 1 %></td>
-      <td><%= link_to "#{song.artist.name}",  artist_path(song.artist) %></td>
-      <td><%= link_to truncate(song.name, length: 40),               song %></td>
+      <td><%= link_to "#{song.artist.name}",            artist_path(song.artist) %></td>
+      <td><%= link_to truncate(album_name, length: 30), album_link               %></td>
+      <td><%= link_to truncate(song.name,  length: 40), song                     %></td>
       
       <td> <div class="admin"> | <%= link_to "Edit ", edit_song_path(song) %> </div></td>
       <td> <div class="admin"> | <%= link_to "Delete", song, method: :delete, data: { confirm: 'Are you sure?' } %> </div></td>
