--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,5 +1,13 @@
 <h3>New album</h3>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="span12">
 
-<%= link_to 'Back', albums_path %>
+    <%= render 'form' %>
+    
+    <%= link_to 'Back', albums_path %>
+
+  </div>
+
+  <p>&nbsp;</p>
+</div>
