--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -12,21 +12,30 @@
   <% end %>
   
   <%= field_set_tag "" do %>
+
     <div class="control-group">
       <%= f.label :name, "Song Name" %>
       <%= f.text_field :name %>
     </div>
+
     <div class="control-group">
       <%= f.label  :artist %> (<%= link_to 'Create New', new_artist_path %>)
       <%= f.collection_select :artist_id, Artist.all.sort_by {|i| i.name.downcase}, :id, :name, {include_blank: 'select an Artist', selected: @selected_artist} %>
     </div>
+
+    <div class="control-group">
+      <%= f.label  :album %> (<%= link_to 'Create New', new_album_path %>)
+      <%= f.collection_select :album_id, Album.all.sort_by {|i| i.name.downcase}, :id, :name, {include_blank: 'select an Album', selected: @selected_album} %>
+    </div>
+
     <div class="control-group">
       <%= f.label  :genre %>  (<%= link_to 'Create New', new_genre_path %>)
       <%= f.collection_select :genre_id,  Genre.all.sort_by {|i| i.name.downcase}, :id, :name,  {include_blank: 'select a Genre', selected: @selected_genre} %>
     </div>
-    <div class="actions">
+
   <% end %>
 
+  <div class="actions">
     <%= f.submit "#{@action} Song", class: "btn btn-primary" %>
     <%# %w{primary info success warning danger inverse link}.each do |i| %>
       <%# f.submit "Create New Song", class: "btn btn-#{i}" %>
