--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,13 +1,15 @@
 <h3>Editing song</h3>
 
 <div class="row">
-  <div class="span6">
+  <div class="span12">
 
     <%= render 'form' %>
 
+    <%= link_to 'Show', @song %> |
+    <%= link_to 'Back', songs_path %>
+
   </div>
 
-  <%= link_to 'Show', @song %> |
-  <%= link_to 'Back', songs_path %>
+  <p>&nbsp;</p>
 </div>
 
