--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,8 +4,10 @@
   <div class="span12">
 
     <%= render 'form' %>
+    
+    <%= link_to 'Back', songs_path %>
 
   </div>
 
-  <%= link_to 'Back', songs_path %>
+  <p>&nbsp;</p>
 </div>
