--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,24 +1,26 @@
 
-<div class="page-title">
+<div class="hero-unit">
 
-  <h2>Welcome!</h2>
+  <h1>Welcome!</h1>
 
   <br>
   <h3>Browse by:</h3>
-    <h4>
+    <p>
     <li><%= link_to 'Artist', artists_path %></li>
-    <li><%= link_to 'Song',   songs_path %>  </li>
-    <li><%= link_to 'Genre',  genres_path %> </li>
-    </h4>
+    <li><%= link_to 'Album',  albums_path  %></li>
+    <li><%= link_to 'Song',   songs_path   %></li>
+    <li><%= link_to 'Genre',  genres_path  %></li>
+    </p>
   <br>
 
-  <h4>
+  
     <%= link_to 'Add New Song',   new_song_path %>
     <br>
     <%= link_to 'Add New Artist', new_artist_path %>
     <br>
+    <%= link_to 'Add New Album',  new_album_path %>
+    <br>
     <%= link_to 'Add New Genre',  new_genre_path %>
-  </h4>
-
+  
 </div>
 
