--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -8,15 +8,15 @@ body {
 
 p, ol, ul, td {
   font-family: 'Open Sans', verdana, arial, helvetica, sans-serif;
-  font-size: 15px;
-  line-height: 18px;
+  // font-size: 15px;
+  // line-height: 18px;
 }
 
 a {
   color: #000;
-  &:visited {
+  /*&:visited {
     color: #666;
-  }
+  }*/
   &:hover {
     color: #fff;
     background-color: #000;
