--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -14,7 +14,7 @@
   <%= field_set_tag "" do %>
     <div class="control-group">
       <%= f.label :name %><br />
-      <%= f.text_field :name %>
+      <%= f.text_field :name, class: "input-xlarge" %>
     </div>
   <% end %>
 
