--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content ="width=device-width, minimum-scale=1.0, initial-scale=1.0">
 
-  <title>The Flatiron School</title>
+  <title>Playlisterrr</title>
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <link rel='stylesheet' id='google_merriweather-css'  href='http://fonts.googleapis.com/css?family=Merriweather:400,700&ver=3.5' type='text/css' media='all' />
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
-  
-  <style type="text/css">a{color:#60BDDB}</style>
 
   <%= javascript_include_tag "application" %>
 
@@ -21,63 +18,12 @@
   
 </head>
 
-<body id="scroll-header" class="home page students">
+<body id="scroll-header">
+
   <!-- Begin Main Wrapper -->
   <div class="main-wrapper">
-    <!-- Begin Header -->
-    <div class="header-wrapper">
-      <div class="header">
-        <div class="header-left">
-          <h1 class="logo-text">
-            <a href="/" title="Playlisterrr">
-              Playlisterrr
-            </a>
-          </h1>
-        </div>
-        <div class="header-right">
-          <div class="menu-header-container">
-            <ul id="nav" class="nav">
-              <li class="menu-item">
-                <a href="http://flatironschool.com/index.html">Home</a>
-              </li>
-              <li>
-                <a href="http://flatironschool.com/program.html">The Program</a>
-                <ul class="sub-menu">
-                  <li><a href="http://flatironschool.com/program.html">Basics</a></li>
-                  <li><a href="http://flatironschool.com/curriculum.html">Curriculum</a></li>
-                  <li><a href="http://flatironschool.com/faculty.html">Faculty</a></li>
-                  <li><a href="http://flatironschool.com/speakers.html">Guest Speakers</a></li>
-                  <li><a href="http://flatironschool.com/faq.html">FAQ</a></li>
-                  <li><a href="http://prework.flatironschool.com">Our Prework</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">The School</a>
 
-                <ul class="sub-menu">
-                  <li><a href="http://flatironschool.com/events.html">Events</a></li>
-                  <li><a href="http://flatironschool.com/contact.html">Contact</a></li>
-                  <li><a href="http://students.flatironschool.com/">Students</a></li>
-                </ul>
-
-              </li>
-              <li><a href="http://info.flatironschool.com/summer-2013-application"><font color="#26c4ff">Apply</font></a>
-              </li>
-              <li>
-                <a href="http://flatironschool.com/employers.html">Employers</a>
-              </li>
-              <li>
-                <a href="http://blog.flatironschool.com/">Blog</a>
-              </li>
-              <li><a href="http://highschool.flatironschool.com/" target="_blank">High School</a></li>
-            </ul>
-          </div>
-          <div class="clear"></div>
-        </div>
-        <div class="clear"></div>
-      </div>
-    </div>
-    <!-- End Header -->
+    <%= render "layouts/navbar" %>
 
     <!-- Begin Content -->
     <div class="container">
@@ -85,98 +31,50 @@
       <%= yield %>
 
     </div>
-    <div class="clear"></div>
+    <!-- <div class="clear"></div> -->
     <!-- End Content -->
   </div>
   <!-- End Main Wrapper -->
 
 
-
   <!-- Begin Footer -->
-  <div class="footer">
-    <div class="footer-text">
-      <div class="footer-text-left">
-        <div class="menu">
-          <ul>
-            <li>
-              <a href="/index.html">
-                <i class="icon-home icon-2x"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://twitter.com/flatironschool">
-                <i class="icon-twitter icon-2x"></i>
-              </a>
-            </li>
-            <li>
-              <a href="http://www.facebook.com/FlatironSchool">
-                <i class="icon-facebook-sign icon-2x"></i>
-              </a>
-            </li>
-            <li>
-              <a href="http://instagram.com/flatironschool">
-                <i class="icon-camera-retro icon-2x"></i>
-              </a>
-            </li>
-            <li>
-              <a href="http://www.linkedin.com/company/the-flatiron-school">
-                <i class="icon-linkedin-sign icon-2x"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/organizations/flatiron-school">
-                <i class="icon-github-alt icon-2x"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-text-right">
-        <div class="copyright">
+  <div class="navbar navbar-footer">
+    <div class="navbar-inner">
+      <div class="navbar-container">
+      <ul class="nav">
+        <li>
+          <a href="https://twitter.com/flatironschool">
+            <i class="icon-twitter icon-2x"></i>
+          </a>
+        </li>
+        <li>
+          <a href="http://www.facebook.com/FlatironSchool">
+            <i class="icon-facebook-sign icon-2x"></i>
+          </a>
+        </li>
+        <li>
+          <a href="http://instagram.com/flatironschool">
+            <i class="icon-camera-retro icon-2x"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/organizations/flatiron-school">
+            <i class="icon-github-alt icon-2x"></i>
+          </a>
+        </li>
+      </ul>
+
+      <ul class="nav pull-right" style="display:table-cell; vertical-align:middle">
+        <li>
+          <a>
           &copy; 2013. Flatiron 002 Team Rogue.  All Your Music Are Belong To Us.
-        </div>
+        </a>
+        </li>
+      </ul>
       </div>
-      <div class="clear"></div>
     </div>
   </div>
   <!-- End Footer -->
-
-  <script type='text/javascript'>var custom_js_vars={"flexslider_auto":"enabled"};</script>
-
-  <script type="text/javascript">
-
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-33578770-1']);
-    _gaq.push(['_setDomainName', 'flatironschool.com']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-
-  <script type="text/javascript">
-    (function(d,s,i,r) {
-
-      if (d.getElementById(i)){return;}
-
-      var n=d.createElement(s),e=d.getElementsByTagName(s)[0];
-
-      n.id=i;n.src='//js.hubspot.com/analytics/'+(Math.ceil(new Date()/r)*r)+'/69751.js';
-
-      e.parentNode.insertBefore(n, e);
-
-    })(document,"script","hs-analytics",300000);
-
-    document.getElementById('#background').scrollIntoView();
-  </script>
-
-  <script type="text/javascript">
-    jQuery('a').smoothScroll({offset: -152, speed: 1000});
-    jQuery('.go-to-link a').smoothScroll();
-  </script>
 
 </body>
 </html>
