--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -6,16 +6,18 @@
 <%= link_to 'Add New Artist', new_artist_path, class: "btn btn-small btn-info" %>
 <hr>
 
-<ol>
-  <% artistz = @artists.sort_by {|i| i.name.downcase} %>
-  <% max = Artist.longest_name_length(artistz) %>
-  <% artistz.each do |artist| %>
-    <li>
-      <div class="hoverable">
-        <pre><%= link_to artist.print(max, true, true), artist %><span class="admin">  | <%= link_to "Edit", edit_artist_path(artist) %> | <%= link_to 'Delete', artist, method: :delete, data: { confirm: 'Are you sure?' } %></span></pre>
-      </div>
-    </li>
-  <% end %>
-</ol>
+<div class="content-scroll">
+  <ol>
+    <% artistz = @artists.sort_by {|i| i.name.downcase} %>
+    <% max = Artist.longest_name_length(artistz) %>
+    <% artistz.each do |artist| %>
+      <li>
+        <div class="hoverable">
+          <pre><%= link_to artist.print(max, true, true), artist %><span class="admin">  | <%= link_to "Edit", edit_artist_path(artist) %> | <%= link_to 'Delete', artist, method: :delete, data: { confirm: 'Are you sure?' } %></span></pre>
+        </div>
+      </li>
+    <% end %>
+  </ol>
+</div>
 
 <br>
