--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -6,31 +6,46 @@
 <%= link_to 'Add New Song', new_song_path, class: "btn btn-small btn-info" %>
 <hr>
 
-<table>
-  <tr>
-    <th></th>
-    <th>Artist</th>
-    <th>Album</th>
-    <th>Song</th>
-    <th>Genre</th>
-    <th></th>
-    <th></th>
-  </tr>
-  <% songz = @songs.sort_by {|i| i.name.downcase} %>
-  <% songz.each_with_index do |song, index| %>
-    <% album_name = song.album.nil?  ?  ""  : song.album.name  %>
-    <% album_link = song.album.nil?  ?  "#" : album_path(song.album) %>
-    <tr class="hoverable">
-      <td><%= index + 1 %></td>
-      <td><%= link_to truncate(song.artist.name, length: 30), artist_path(song.artist) %></td>
-      <td><%= link_to truncate(album_name, length: 30),       album_link               %></td>
-      <td><%= link_to truncate(song.name, length: 40),        song                     %></td>
-      <td><%= link_to song.genre.name,                        genre_path(song.genre)   %></td>
-      
-      <td> <div class="admin"> | <%= link_to "Edit ", edit_song_path(song) %> </div></td>
-      <td> <div class="admin"> | <%= link_to "Delete", song, method: :delete, data: { confirm: 'Are you sure?' } %> </div></td>
-    </tr>
-  <% end %>
-</table>
+<div >
+  <div class="inner-table-wrapper">
+    <table>
+
+      <thead>
+        <tr>
+          <th></th>
+          <th>Artist</th>
+          <th>Album</th>
+          <th>Song</th>
+          <th>Genre</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+      <% songz = @songs.sort_by {|i| i.name.downcase} %>
+      <% songz.each_with_index do |song, index| %>
+        <% album_name = song.album.nil?  ?  ""  : song.album.name  %>
+        <% album_link = song.album.nil?  ?  "#" : album_path(song.album) %>
+        <tr class="hoverable td-link">
+          <td><%= index + 1 %></td>
+          <td><%= link_to truncate(song.artist.name, length: 30), artist_path(song.artist) %></td>
+          <td><%= link_to truncate(album_name, length: 30),       album_link               %></td>
+          <td><%= link_to truncate(song.name, length: 40),        song                     %></td>
+          <td><%= link_to song.genre.name,                        genre_path(song.genre)   %></td>
+          
+          <td> <div class="admin"> <%= link_to "Edit ", edit_song_path(song) %> </div></td>
+          <td> <div class="admin"> <%= link_to "Delete", song, method: :delete, data: { confirm: 'Are you sure?' } %> </div></td>
+        </tr>
+      <% end %>
+      </tbody>
+
+    </table>
+  </div>
+</div>
 
 </br>
+
+<script type="text/javascript">
+  $("table").stickyTableHeaders();
+</script>
