--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <h3>Artists</h3>
-<%= link_to 'Add New Artist', new_artist_path, class: "btn btn-small btn-info" %>
+<%= link_to '<span class="fui-plus-16"></span> Add New Artist'.html_safe, new_artist_path, class: "btn btn-small btn-info" %>
 <hr>
 
 <div class="content-scroll">
