--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <h3>Genres</h3>
-<%= link_to 'Add New Genre', new_genre_path, class: "btn btn-small btn-info" %>
+<%= link_to '<span class="fui-plus-16"></span> Add New Genre'.html_safe, new_genre_path, class: "btn btn-small btn-info" %>
 <hr>
 
 <div class="content-scroll">
