--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <h3>Albums</h3>
-<%= link_to 'Add New Album', new_album_path, class: "btn btn-small btn-info" %>
+<%= link_to '<span class="fui-plus-16"></span> Add New Album'.html_safe, new_album_path, class: "btn btn-small btn-info" %>
 <hr>
 
 
