--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <h3>Songs</h3>
-<%= link_to 'Add New Song', new_song_path, class: "btn btn-small btn-info" %>
+<%= link_to '<span class="fui-plus-16"></span> Add New Song'.html_safe, new_song_path, class: "btn btn-small btn-info" %>
 <hr>
 
 <div >
